--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bejanaronotes",
+  "homepage": "https://bejaranonotes.github.io/cs251",
   "private": true,
   "version": "0.0.0",
   "type": "module",
