--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "yet-another-react-lightbox": "^3.21.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
